--- a/style.css
+++ b/style.css
@@ -69,6 +69,33 @@
 }
 /*  ===================== */
 
+/* From cssbuttons.io */
+.my_button_3 {
+    padding: 1.1rem 3rem;
+    font-size: 13px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: rgb(158, 165, 228);
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+}
+.my_button_3:hover {
+    background-color: #2EE59D;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: rgb(0, 0, 0);
+    transform: translateY(-7px);
+}
+.my_button_3:active {
+    transform: translateY(-1px);
+}
+/* ================== */
+
 /* ========= NAV =========== */
 .navbar {
     background: #232526;    /* fallback for all browseres */
@@ -175,9 +202,22 @@
     /* letter-spacing: 2px; */
 }
 #about p {
-    /* color: #FD511A;  #21B573;*/
+    /* color: #FD511A;  #21B573; #4D4DFF*/
     color: #F7F5F4;
-    font-weight: 400;
+    font-weight: 300;
     font-size: 1.1rem;
     letter-spacing: 0.5px;
+}
+
+/* ========= discover ============= */
+#discover .text_dis h6 {
+    color: #4D4DFF;
+    font-weight: 900;
+    font-size: 1rem;
+    letter-spacing: 2px;
+}
+#discover .text_dis h2 {
+    color: #000000;
+    font-weight: 800;
+    font-size: 2.1rem;
 }
