--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;    
 }
+.color-pri {
+    color: #00FF40;
+}
 
         /* =========  my_button_1  ============== */
 .my_button_1 {
@@ -272,3 +275,18 @@
     font-size: 1.1rem;
     letter-spacing: 0.5px;
 }
+
+/* footer */
+footer ul {
+    list-style: none;
+}
+footer ul li {
+    margin-bottom: 10px;
+}
+footer ul > li:hover {
+    cursor: pointer;
+    transition: 0.6s;
+    color: #21B573;
+}
+
+/*  */
