--- a/style.css
+++ b/style.css
@@ -143,19 +143,8 @@
     align-content: center;      /* align-items: center;*/
 }
 
-/* .home img {
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    object-fit: cover;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0.2;
-} */
 #home_image {
-    background: rgba(0, 0, 0, 0.65) url("./img/main.jpg");
+    background: rgba(18, 18, 18, 0.65) url("./img/main.jpg");
     background-size: cover;
     background-blend-mode: darken;
 }
@@ -231,6 +220,11 @@
     padding-right: 1.4rem;
     padding-bottom: 2.6rem;
     filter: drop-shadow(28px 8px 13px #41414b);
+    transition: 1s 0s ease-in-out;
+}
+#service .container .col:hover {
+    box-shadow: 0 0 10px rgba(33, 33, 33, 0.447);
+    transform: translateY(0.7rem) translateX(0.7rem);
 }
 #service .heading h1 {
     color: #39FF14;
@@ -290,3 +284,23 @@ footer ul > li:hover {
 }
 
 /*  */
+.my-ins-bg {
+    /* background: linear-gradient(115deg, #aeaeff, #e31bf1); */
+    background: #bdc3c7;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */      
+}
+#my-h2 {
+    color: #232323f8;
+    font-size: 2.3rem;
+}
+
+.ins-card {
+    border-radius: 68px;
+    border-style: none;
+    background: linear-gradient(145deg, #f3c9f3, #d15fc6);
+    box-shadow:  0px 0px 14px #8f8bbf,
+                 0px 0px 14px #2c3e50d2;
+}
+
+/* ======== Media Queries ========== */
